<resources>

    <string name="app_name">Budgety</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>



    <string name="title_activity_login">Sign in</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="login_header_desc">Login Header</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_create_account">Create Account</string>
    <string name="action_GoToLogin">Login instead</string>
    <string name="welcome">"Welcome !"</string>



    <string name="button_text_ok">OK</string>


    <string name="error_message_title">Error!</string>



    <string name="dialog_choosePicture_title">Select</string>
    <string name="dialog_choosePicture_gallery">Gallery</string>
    <string name="dialog_choosePicture_camera">Camera</string>
    <string name="dialog_choosePicture_remove">Remove Picture</string>



    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="login_failed_no_user">User not found</string>
    <string name="login_failed_wrong_password">Wrong password</string>
    <string name="login_failed_user_password_not_valid">Username or password not valid</string>
    <string name="login_goback_link">
        <u>Already have an account? Login instead.</u>
    </string>


    <string name="invalid_create_username_in_password">The username can not be part of your password.</string>
    <string name="invalid_create_passwords_not_equal">The provided password are not equal.</string>
    <string name="invalid_create_password_length">The provided password is too short.</string>
    <string name="invalid_create_password_complexity">The provided password does not meet the complexity requirements.</string>
    <string name="create_user_exists_already">The username already exists.</string>


    <string name="prompt_picture_profile_desc">Click to set a profile picture</string>

    <string name="prompt_username_new">Enter your username</string>
    <string name="prompt_password_new">Enter your password</string>
    <string name="prompt_password_new_check">Re-enter your password</string>


    <string name="menu_home">Home</string>
    <string name="menu_accounts">Accounts</string>
    <string name="menu_budgets">Budgets</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_stores">Stores</string>
    <string name="menu_debts">Debts</string>
    <string name="menu_templates">Templates</string>

    <string name="menu_subTitle">Configure</string>
    <string name="menu_planned">Planned Payments</string>
    <string name="menu_about">About</string>
    <string name="menu_settings">Settings</string>


</resources>
