<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">


        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_accounts"
            android:icon="@drawable/ic_menu_accounts"
            android:title="@string/menu_accounts"/>
        <item
            android:id="@+id/nav_budgets"
            android:icon="@drawable/ic_menu_budgets"
            android:title="@string/menu_budgets" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_menu_categories"
            android:title="@string/menu_categories" />
        <item
            android:id="@+id/nav_stores"
            android:icon="@drawable/ic_menu_stores"
            android:title="@string/menu_stores" />
        <item
            android:id="@+id/nav_debts"
            android:icon="@drawable/ic_menu_debts"
            android:title="@string/menu_debts" />
    </group>

    <group
        android:id="@+id/menu_grp_02"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_planned"
            android:icon="@drawable/ic_menu_planned"
            android:title="@string/menu_planned"/>
        <item
            android:id="@+id/nav_templates"
            android:icon="@drawable/ic_menu_templates"
            android:title="@string/menu_templates" />
    </group>

    <group
        android:id="@+id/menu_grp_03"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings"/>

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/menu_about" />
    </group>

  <!--  <item android:title="@string/menu_subTitle">
        <menu>


        </menu>
    </item>-->

</menu>
