<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:gravity="bottom"
    android:orientation="vertical"
    android:background="@drawable/ic_menu_header"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">
<!--    android:theme="@style/ThemeOverlay.AppCompat.Dark"-->


    <com.google.android.material.card.MaterialCardView
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:elevation="12dp"
        android:shape="ring"
        android:thicknessRatio="1.9"
        app:cardCornerRadius="30dp">

        <ImageView
            android:id="@+id/main_account_picture"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/prompt_picture_profile_desc"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_account_circle_grey" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/header_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/AppTheme"
        android:textColor="@color/navHeaderTextColor"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/header_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_subtitle"
        android:textAppearance="@style/AppTheme"
        android:textColor="@color/navHeaderTextColor"
        android:textSize="14sp" />

</LinearLayout>
